Добавил раздел про асинхронные функции Добавил дополнительные критерии для модулей, гита и задач

--- a/Модули и зависимости.md
+++ b/Модули и зависимости.md
@@ -230,6 +230,5 @@ function getComponent(name) {
 Если какая-то задача решается уже подключенным модулем, не нужно тащить еще один.
 Например, если в проекте уже используется `lodash`, не нужно подключать к нему `ramda`.
 
-Если задача легко решается встроенными в язык функциями,
-то подключать отдельный модуль не стоит.
+Если задача легко решается встроенными в язык функциями, то подключать отдельный модуль не стоит.
 Например не нужно подключать `is-array`, вместо этого нужно использовать `Array.isArray`.
