Добавил критерии для функций и методов, и доработал для остальных

--- a/Промисы и асинхронность.md
+++ b/Промисы и асинхронность.md
@@ -6,10 +6,10 @@
 Если какую-то асинхронную цепочку можно выполнить «параллельно»,
 нужно использовать `Promise.all`.
 
-Например если нужно запросить данные из нескольких несвязанных коллекций.
+Например, когда нужно запросить данные из нескольких несвязанных коллекций.
 
 ### Promise.race используется там где возможно
-Например для таймаутов операций.
+Например, для таймаутов операций.
 
 ### В обертках над callback API вызовы resolve и reject должны быть возвращены
 Это позволяет избежать сложных ошибок, например резолва промиса, когда он был зареджекчен.
@@ -40,7 +40,7 @@ function stopServer() {
 ```
 
 ### В обертках над callback API обработка ошибки должна быть описана в самом начале
-Серьезно, не стреляйте себе в ногу
+Серьезно, не стреляйте себе в ногу.
 
 **Правильно**
 ```js
@@ -215,13 +215,15 @@ for await (const bot of bots) {
 const bots = await Bot.find().exec();
 ```
 
+### При выполнении приложения или модуля не возникает необработанных ошибок `Unhandled Promise Rejection`
+
 # Дополнительные
 
 ## Промисы
 
 ### Используется нативная реализация промисов, кроме случаев когда это объективно оправдано
 
-### В исинхронных функциях и цепочках промисов нет бесполезных или вредных `catch` или `.catch` блоков
+### В асинхронных функциях и цепочках промисов нет бесполезных или вредных `catch` или `.catch` блоков
 Если функция используется в цепочке промисов, или другой асинхронной функцией то ей скорее всего не нужен блок `try/catch` или `.catch()`.
 Ошибки нужно обрабатывать в более высоких функциях.
 
