Обновил критерии - Функций и методы - Модули и зависимости

--- a/Модули и зависимости.md
+++ b/Модули и зависимости.md
@@ -165,6 +165,8 @@ module.exports = someFunction;
 let someVar = null;
 ```
 
+### Если одинаковый код повторяется в нескольких местах, он вынесен в отдельный модуль
+
 ## Зависимости
 
 ### В прод-зависимостях находятся только необходимые и используемые модули
@@ -199,6 +201,7 @@ let someVar = null;
 }
 ```
 
+### Механизмы, модули и библиотеки которые не принадлежат предметной области или могут быть переиспользованы в других проектах вынесены в отдельную зависимость.
 
 # Дополнительные
 
@@ -224,6 +227,30 @@ function getComponent(name) {
 }
 ```
 
+### Несколько функций и параметров связанных общей логикой или предметной областью располагаются в одном модуле
+Как пример, функции для получения тела из зароса в разных форматах:
+```js
+function parseBuffer(req) {
+  // ...
+}
+
+function parseText(req) {
+  // ...
+}
+
+function parseJSON(req) {
+  // ...
+}
+
+function parseAuto(req) {
+  // ...
+}
+
+module.exports = { parseBuffer, parseText, parseJSON, parseAuto };
+```
+Если хочется разбить функции на несколько файлов, их можно собрать в одной папке,
+и экспортировать через `index.js`
+
 ## Зависимости
 
 ### Количество внешних зависимостей минимизировано
@@ -232,3 +259,16 @@ function getComponent(name) {
 
 Если задача легко решается встроенными в язык функциями, то подключать отдельный модуль не стоит.
 Например не нужно подключать `is-array`, вместо этого нужно использовать `Array.isArray`.
+
+### Если в проекте есть lodash, то проверка через typeof менее предпочтительна, чем проверка одной из `is`-функций
+**Желательно**
+```js
+const isString = require('lodash/isString');
+
+assert(isString('Строка'));
+```
+
+**Нежелательно**
+```js
+assert(typeof 'Строка' === 'string');
+```
