--- a/Функции и методы.md
+++ b/Функции и методы.md
@@ -129,6 +129,36 @@ module.exports = function(engine) {
 ```
 Такие функции гораздо проще искать. У них есть имя в стектрейсе ошибок.
 
+### Название содержит глагол у всех функции и методов, кроме обработчиков событий и колбэков
+Можно принебречь этим критерием, если на это есть объективные причины.
+
+**Правильно**
+```js
+function doSomething() {}
+
+const go = () => {}
+
+const run = function() {}
+```
+
+**Неправильно**
+```js
+function something() {}
+
+const fn = () => {}
+
+const awesome = function() {}
+```
+
+### Имена обработчиков событий начинаются с `on`, или в крайнем случае заканчиваются на `Handler`
+
+### Обработчик события или колбек не берет на себя больше чем должен
+Это в принципе дополнение к одному уровню ответственности.
+В колбэках и обработчиках желательно отсутствие бизнесс-логики.
+
+Распарсить данные и передать дальше, преобразовать и т. п. Это все может быть в событиях и колбэках.
+А вот работу с базой и т. п. лучше от туда убрать.
+
 # Дополнительные
 
 ## Функции и методы
@@ -165,10 +195,10 @@ doSomething({ one: 1, two: 2, three: 3, four: 4 });
 Уместно:
 - в колбэках
 - обработчиках событий, если стрелочная функция не метод объекта класса
-- там где нужно удержать контекст
-- там где нужно удержать аргументы
+- там где нужно удержать контекст this
+- там где нужно удержать псевдомассив arguments
 - в создаваемых и возвращаемых функциях
-- если важно ограничить вызов фунцкии до ее инициализации
+- если важно ограничить вызов функции до ее инициализации
 
 Не уместно:
 - для библиотечных или модульных функций
@@ -177,9 +207,38 @@ doSomething({ one: 1, two: 2, three: 3, four: 4 });
 Просто нужно знать свой язык, и понимать, что стрелочные функции — не просто красивая обертка.
 
 ### Простые анонимные функции применяются там где это уместно
-Например когда нужно передать контекстно-независимую функцию или важно ограничить вызов фунцкии до ее инициализации.
+Например когда нужно передать контекстно-независимую функцию или важно ограничить вызов функции до ее инициализации.
 ```js
-Model.method('', function() {});
+Model.method('doSomething', function() {});
 ```
 Хотя в таких случаях часто имеет смысл использовать функции с именем (например в моделях Mongoose),
 чтобы ее можно было быстро найти инструментами редактора по имени.
+
+### Библиотечная функция или метод объекта не созданные изначально как обработчик события или колбэк, не должны ими становиться
+**Правильно**
+```js
+function doSomething(data) {
+  const action = { type: 'something', payload: data };
+  return doSomethingElse(action);
+}
+
+emitter.on('some-event', (data) => {
+  doSomething(data);
+});
+```
+
+**Неправильно**
+```js
+function doSomething(data) {
+  const action = { type: 'something', payload: data };
+  return doSomethingElse(action);
+}
+
+emitter.on('some-event', doSomething);
+```
+
+### Имена обработчиков событий следуют шаблону `on` + `Где` + `Случилось` или `on` + `Случилось`
+Например `onFormSubmit`, `onRequestClose`, `onRedboneError`, `onData`. `onSuccess`, `onError`
+
+Сокращенный вариант без имени элемента события желательно использовать только в том случае,
+если при чтении сразу понятно для кого создан этот обработчик.
