Добавил несколько критериев для методов и уточнил один критерий для гита

--- a/Функции и методы.md
+++ b/Функции и методы.md
@@ -214,7 +214,7 @@ Model.method('doSomething', function() {});
 Хотя в таких случаях часто имеет смысл использовать функции с именем (например в моделях Mongoose),
 чтобы ее можно было быстро найти инструментами редактора по имени.
 
-### Библиотечная функция или метод объекта не созданные изначально как обработчик события или колбэк, не должны ими становиться
+### Библиотечная функция или метод объекта изначально не созданные как обработчик события или колбэк, не должны ими становиться
 **Правильно**
 ```js
 function doSomething(data) {
@@ -242,3 +242,15 @@ emitter.on('some-event', doSomething);
 
 Сокращенный вариант без имени элемента события желательно использовать только в том случае,
 если при чтении сразу понятно для кого создан этот обработчик.
+
+### Имена приватных и защищенных методов начинаются с нижнего подчеркивания
+
+### Вызовы приватных методов в наследниках минимизированы
+Это значит, что наследники должны стараться пользоваться только публичным API класса.
+
+### Метод который изменяет внутреннее состояние объекта ничего не возвращает или возвращает `this` для чейнинга. Исключение асинхронные функции, которые всегда возвращают Промис
+Это сложный и спрорный критерий. Его соблюдение должно сделать код более предсказуемым,
+и освободить голову от мыслей, что разработчики будут заучивать как ведет себя API вашего класса.
+
+Будьте аккуратны с этим критерием, его точно стоит обсудить несколько раз и запечатлить эти обсуждения тут.
+Оставьте его пока последним.
