Исправил опечатки и указал пожелания

--- a/Модули и зависимости.md
+++ b/Модули и зависимости.md
@@ -3,7 +3,7 @@
 ## Модули
 
 ### Модули должны подключаться в начале файла
-Это правило можно нарушить только на это есть объективные причины,
+Это правило можно нарушить только если на это есть объективные причины,
 например условная загрузка или автозагрузка по динамическому пути.
 
 **Правильно:**
@@ -91,7 +91,7 @@ const SOME_PARAM = 12;
 ```
 
 ### Нельзя подключать модуль несколько раз в одном файле
-Это правило можно нарушить только на это есть объективные причины,
+Это правило можно нарушить только если на это есть объективные причины,
 например условная загрузка или автозагрузка по динамическому пути.
 
 Вместо множественного подключения нужно использовать присваивание через деструктор.
@@ -108,7 +108,7 @@ const inspect = require('util').inspect;
 ```
 
 ### Пути до модулей не должны быть динамическими без объективных причин
-Это правило можно нарушить только на это есть объективные причины,
+Это правило можно нарушить только если на это есть объективные причины,
 например условная загрузка или автозагрузка по динамическому пути.
 
 
