--- a/Промисы и асинхронность.md
+++ b/Промисы и асинхронность.md
@@ -94,15 +94,15 @@ const promisses = messages.map((message) => {
 const results = await Promise.all(promisses);
 ```
 Проблема этого кода в том, что `Promise.all` внутри будет наполнять результирующий массив данными.
-Вероятно большим колличеством данных, потому что сообщений может быть много, а боты могут быть большими.
+Вероятно большим количеством данных, потому что сообщений может быть много, а боты могут быть большими.
 
-В какой-то момент процесс NodeJS не сможет выделить достаточное колличество оперативной памяти и упадет.
+В какой-то момент процесс NodeJS не сможет выделить достаточное количество оперативной памяти и упадет.
 
 Решений тут несколько. Например пересмотреть подход, и возможно запрашивать данные по другому,
 или небольшими партиями.
 
 Как временное решение можно сделать все что нужно в отдельной асинхронной функции (или методе),
-и ничего из этой функций не возращать.
+и ничего из этой функций не возвращать.
 
 ```js
 const messages = await Messages.find({}, { _id: 1 }).exec();
