--- a/Функции и методы.md
+++ b/Функции и методы.md
@@ -25,7 +25,7 @@ callSomeFunctionWithReallyDirtyLongName(andReallyDirty, andLongArguments, hardTo
 ```
 
 В идеале такие места лучше изменить, переделать, перерефакторить.
-Сделать что угодно, чтобы стало кроче, лаконичней и опрятней.
+Сделать что угодно, чтобы стало короче, лаконичней и опрятней.
 
 ### Фукции и методы стремятся к одному уровню ответственности
 Давайте разберем на примере.
@@ -96,7 +96,7 @@ async function getComponent(name) {
 ```
 Может показаться что функций стало слишком много.
 Но такие функции проще читать, проще тестировать автоматически, и их проще обслуживать.
-Каждая из закрывает разные уровни, в результате итоговая функция лишена лишних подробностей.
+Каждая из них закрывает разные уровни, в результате итоговая функция лишена лишних подробностей.
 
 Ей больше не важно как вообще имя преобразуется в объект опций компонента, где они хранятся, и в каком формате.
 Где находятся конструкторы компонентов ей тоже не важно.
