Добавил критерий про расширение файла в модулях

--- a/Модули и зависимости.md
+++ b/Модули и зависимости.md
@@ -57,7 +57,7 @@ const assert = require('assert');
 const assert = require('assert');
 const isString = require('lodash/isString');
 
-const Memory = require('./providers/Memory.js')
+const Memory = require('./providers/Memory')
 ```
 
 **Неправильно**
@@ -166,6 +166,17 @@ let someVar = null;
 ```
 
 ### Если одинаковый код повторяется в нескольких местах, он вынесен в отдельный модуль
+
+### При подключении модулей расширение файла опускается по возможности
+**Правильно**
+```js
+const Memory = require('./providers/Memory');
+```
+
+**Неправильно**
+```js
+const Memory = require('./providers/Memory.js');
+```
 
 ## Зависимости
 
